--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,30 +14,37 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QLineEdit" name="wordInput">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>220</y>
-      <width>80</width>
-      <height>25</height>
+      <x>10</x>
+      <y>10</y>
+      <width>113</width>
+      <height>21</height>
      </rect>
     </property>
-    <property name="text">
-     <string>hellooo</string>
-    </property>
    </widget>
-   <widget class="QLabel" name="helo">
+   <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>110</y>
+      <x>10</x>
+      <y>50</y>
+      <width>621</width>
+      <height>351</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelstatus">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>10</y>
       <width>54</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>standby</string>
     </property>
    </widget>
   </widget>
@@ -50,12 +57,6 @@
      <height>22</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuhiiii">
-    <property name="title">
-     <string>hiiii</string>
-    </property>
-   </widget>
-   <addaction name="menuhiiii"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
